# marketplace-appraiser-desktop

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
dashboard/: index.html  package-lock.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css  types.ts
dashboard/src/components/: ConsoleOutput.tsx  Controls.tsx  EmailPreview.tsx  FeedbackPanel.tsx  PipelineProgress.tsx  RunHistory.tsx  StatusBar.tsx
dashboard/src/hooks/: useAppraisal.ts  useWebSocket.ts
electron/: main.js  package-lock.json  package.json  preload.js
electron/scripts/: make-icon.py
scripts/: evaluate.py  launch_chrome.sh  test_listings.txt
src/marketplace_appraiser/: __main__.py  feedback.py  graph.py  history.py  server.py  state.py
src/marketplace_appraiser/item_types/: __init__.py  _base.py  electronics.py  furniture.py  general.py  vehicle.py
src/marketplace_appraiser/nodes/: condition.py  email_report.py  market.py  price.py  scraper.py  seller.py  vision.py
src/marketplace_appraiser/utils/: image_utils.py  langfuse_ctx.py  llm.py  parsing.py  research.py  safety_apis.py  search.py
tests/: test_graph.py  test_item_types.py  test_parsing.py
